Se añadio el Navbar aun no es funcional falta agregar rutas y visualizaciones de estas

--- a/Front-MHADFOX/src/app/app.component.html
+++ b/Front-MHADFOX/src/app/app.component.html
@@ -1,7 +1,4 @@
-<mat-toolbar>
-  <span>My App</span>
-  <button mat-button routerLink="/">Home</button>
-  <button mat-button routerLink="/about">About</button>
-</mat-toolbar>
-
-<router-outlet />
+<app-navbar></app-navbar>
+<main>
+  <router-outlet></router-outlet>
+</main>
