--- a/Front-MHADFOX/src/styles.css
+++ b/Front-MHADFOX/src/styles.css
@@ -1,5 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 @import url("../node_modules/@angular/material/prebuilt-themes/azure-blue.css");
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+  font-family: 'Nunito', sans-serif;
+}
