--- a/Front-MHADFOX/src/app/navbar/navbar.component.html
+++ b/Front-MHADFOX/src/app/navbar/navbar.component.html
@@ -1,11 +1,28 @@
 <mat-toolbar color="primary">
-    <div class="toolbar-content">
-      <span>MHAD FOX Solution</span>
-      <div class="buttons-container">
-        <button mat-raised-button routerLink="/Home">Home</button>
-        <button mat-raised-button routerLink="/AboutUs">¿Quiénes somos?</button>
-        <button mat-raised-button routerLink="/Contact">Contacto</button>
-      </div>
+  <div class="toolbar-content">
+    <!-- Título de la aplicación -->
+    <span>MHAD FOX Solution</span>
+    
+    <!-- Botones para versión Desktop -->
+    <div class="buttons-container">
+      <button mat-raised-button (click)="hdlBtnhome()">Inicio</button>
+      <button mat-raised-button (click)="hdlBtnAbout()">¿Quiénes somos?</button>
+      <button mat-raised-button (click)="hdlBtnContact()">Contacto</button>
     </div>
-  </mat-toolbar>
-  
+    
+    <!-- Botón de menú para versión móvil -->
+    <button mat-icon-button 
+            class="menu-button"
+            (click)="toggleMenu()"
+            aria-label="Menú móvil">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
+</mat-toolbar>
+
+<!-- Menú móvil que se muestra al hacer clic en el botón de menú -->
+<div class="mobile-menu" [class.open]="isMenuOpen">
+  <button mat-button (click)="navigateTo('inicio')">Inicio</button>
+  <button mat-button (click)="navigateTo('quienes-somos')">¿Quiénes somos?</button>
+  <button mat-button (click)="navigateTo('contacto')">Contacto</button>
+</div>
