--- a/Front-MHADFOX/src/app/app.component.html
+++ b/Front-MHADFOX/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <main>
+  <app-header></app-header>
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
