--- a/Front-MHADFOX/src/shared/components/footer/footer.component.css
+++ b/Front-MHADFOX/src/shared/components/footer/footer.component.css
@@ -3,7 +3,7 @@
   }
   
   .footer-links a {
-    color: white;
+    color: #012E40;
     text-decoration: none;
     margin: 0 0.5rem;
     font-size: 0.875rem;
