--- a/Front-MHADFOX/src/shared/components/navbar/navbar.component.html
+++ b/Front-MHADFOX/src/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <div class="toolbar-content">
     <button mat-button routerLink="/home" class="logo-button">
-      <img src="/assets/images/LogoMHADFOX.png" class="logo-img">
+      <img src="images/LogoMHADFOX.png" class="logo-img">
       <span>MHAD FOX Solution</span>
     </button>
 
