--- a/Front-MHADFOX/src/shared/components/navbar/navbar.component.html
+++ b/Front-MHADFOX/src/shared/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <div class="toolbar-content">
-    <button mat-button routerLink="/home" class="logo-button">
+    <button routerLink="/home" class="logo-button">
       <img src="images/LogoMHADFOX.png" class="logo-img">
       <span>MHAD FOX Solution</span>
     </button>
