--- a/Front-MHADFOX/src/shared/components/navbar/navbar.component.css
+++ b/Front-MHADFOX/src/shared/components/navbar/navbar.component.css
@@ -31,17 +31,28 @@ mat-toolbar {
   display: none;
 }
 .logo-button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   background: none;
   border: none;
   padding: 0;
   margin-right: 10px;
   cursor: pointer;
-  align-items: center;
+  text-transform: none;
+  transition: all 0.2s ease;
+}
+.logo-button:hover {
+  border: none;
+  border-radius: 10px;
+  background-color: #D8D9D7;
+}
+.logo-img {
+  height: 40px;
+  width: auto;
 }
 
-.logo-img {
-  height: 40px; /* Ajusta según el tamaño deseado */
-}
+
 
 @media (max-width: 768px) {
   /* Oculta los botones de la versión Desktop */
