--- a/Front-MHADFOX/src/pages/components/quienes-somos/quienes-somos.component.css
+++ b/Front-MHADFOX/src/pages/components/quienes-somos/quienes-somos.component.css
@@ -13,8 +13,8 @@
   .about-container {
     text-align: center;
     padding: 2rem;
-    background-color: #f5f5f5;
-    color: #333;
+    /*background-color: #f5f5f5;
+    color: #333;*/
   }
   
   .team-grid {
