--- a/Front-MHADFOX/src/shared/components/footer/footer.component.html
+++ b/Front-MHADFOX/src/shared/components/footer/footer.component.html
@@ -1,10 +1,13 @@
 <footer class="footer">
-    <div class="footer-content">
-      <p class="footer-text">MHAD FOX Solution ®</p>
-      <div class="footer-links">
-        <a href="/about">Acerca de</a>
-        <a href="/privacy">Política de privacidad</a>
-        <a href="/terms">Términos de uso</a>
-      </div>
+  <p class="footer-text">
+    © Copyright MHAD FOX Solution Todos los derechos reservados<br>
+    Diseñado por MHAD FOX Solution.
+  </p>
+  <div class="footer-content">
+    <div class="footer-links">
+      <a routerLink="/about">Acerca de</a>
+      <a routerLink="/privacy">Política de privacidad</a>
+      <a routerLink="/terms">Términos de uso</a>
     </div>
-  </footer>
+  </div>
+</footer>
