--- a/Front-MHADFOX/src/shared/components/navbar/navbar.component.css
+++ b/Front-MHADFOX/src/shared/components/navbar/navbar.component.css
@@ -36,7 +36,7 @@ mat-toolbar {
 
 .custom-button {
   background-color: #F24405;
-  color: white;
+  color: #FFFFFF !important;
   text-transform: capitalize;
   font-weight: bold;
   font-size: 1.5rem;
