--- a/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
+++ b/Front-MHADFOX/src/pages/components/contacto/contacto.component.html
@@ -1,19 +1,20 @@
-<div class="container">
+<section class="hero">
+  <div class="container">
     <h2 class="title"> <span class="highlight">Contactanos</span></h2>
     <p class="description">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      ¿Listo para llevar tu proyecto al siguiente nivel? Escríbenos y empecemos a trabajar juntos.
     </p>
     <mat-grid-list cols="2" rowHeight="500px" >
       <!-- Sección Izquierda: Detalles de Contacto -->
       <mat-grid-tile [colspan]="1" [rowspan]="1">
         <div class="contact-details" >
-          <h3>Datos de contacto</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+          <h3>Estamos aquí para ayudarte, contáctanos</h3>
+          <p>Completa el formulario y nos pondremos en contacto contigo lo antes posible.</p>
           <div class="contact-item">
             <mat-icon class="icon">smartphone</mat-icon>
             <div>
               <strong>TELEFONO:</strong><br>
-              5555555555
+              55-5555-5555
             </div>
           </div>
   
@@ -21,7 +22,7 @@
             <mat-icon class="icon">email</mat-icon>
             <div>
               <strong>EMAIL:</strong><br>
-              mhad.fox.solutiongmail.com
+              mhad.fox.solution&#64;gmail.com
             </div>
           </div>
   
@@ -29,7 +30,7 @@
             <mat-icon class="icon">location_on</mat-icon>
             <div>
               <strong>DIRECCION:</strong><br>
-              6743 last street, Abcd, Xyz
+              6743 Last Street, Abcd, Xyz "Nos encantaría conocerte."
             </div>
           </div>
         </div>
@@ -67,3 +68,4 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
+</section>
